<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:id="@+id/rl_order_item"
    android:layout_marginBottom="10dp"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/ll_order_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/tv_order_number"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TB32453656576686"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_receiver_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_order_number"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/tv_receiver_name"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_receiver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="张三"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_order_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_receiver_name"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_order_transportState1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/tv_order_state"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_order_transportState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_order_transportState1"
            android:text="已签收"
            android:textColor="@color/color_666666"
            android:textSize="15dp" />

        <!--
                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/ic_go"
                    android:gravity="center"
                    android:text="@string/tv_details"
                    android:textColor="@color/color_f08519" />-->


    </RelativeLayout>

</RelativeLayout>